--- a/bot/package.json
+++ b/bot/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "node index.js"
+    "dev": "node index.js",
+    "register": "node register.js"
   },
   "dependencies": {
     "discord.js": "^14.22.1"
